--- a/ui/index.html
+++ b/ui/index.html
@@ -1,17 +1,135 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            This is my app.
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-    </body>
+<head>
+	<title>WoWcolors</title>
+	<link rel="stylesheet" type="text/css" href="ui/style.css">
+	<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/Arunkumar47/imad-2016-app/master/ui/fav_icon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+<body>
+	<div class="wrapper">
+		<div class="sidebar">
+			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="138 128 800 800">
+			<path fill="#54B8EA" d="M588,448.7c0,94.5-76.6,171-171,171c-94.5,0-165.2-77.3-171-171c-5.9-94.3,76.6-171,171-171
+			C519.4,277.7,588,354.2,588,448.7z"/>
+			<path fill="#79ED72" d="M842,449.1c-2.5,75.8-78.6,170.6-175.5,170.6c-96.9,0-175.5-77.7-175.5-173.5c0-95.8,78.6-173.6,175.5-173.6
+			C763.5,272.6,845.2,353.3,842,449.1z"/>
+			<path fill="#54CB51" d="M836.1,452c-2.5,75.8-78.6,170.6-175.5,170.6c-96.9,0-175.5-77.7-175.5-173.5c0-95.8,78.6-173.6,175.5-173.6
+			C757.6,275.5,839.3,356.2,836.1,452z"/>
+			<path fill="#EA4446" d="M841.9,452.9L665,453H541v354.2C541,807.2,831.7,639.9,841.9,452.9z"/>
+			<path fill="#FFB92E" d="M240.1,453h177h327L541.1,807.7C541.1,807.7,254.5,640,240.1,453z"/>
+			<path fill="#549EED" d="M582.1,448.7c0,94.5-76.6,171-171,171c-94.5,0-165.2-77.3-171-171c-5.9-94.3,76.6-171,171-171
+			C505.6,277.7,582.1,354.2,582.1,448.7z"/>
+			<path fill="#FDDB36" d="M240.1,453h185.8h303.7L541.1,807.7C541.1,807.7,254.5,640,240.1,453z"/>
+			<g>
+			<g>
+			<path fill="#54B8EA" d="M355.8,842.5c0,9.1-7.4,16.6-16.6,16.6c-9.1,0-16-7.5-16.6-16.6c-0.6-9.1,7.4-16.6,16.6-16.6
+			C348.4,826,355.8,833.4,355.8,842.5z"/>
+			<path fill="#79ED72" d="M380.4,842.6c-0.2,7.3-7.6,16.5-17,16.5c-9.4,0-17-7.5-17-16.8s7.6-16.8,17-16.8
+			C372.8,825.5,380.7,833.3,380.4,842.6z"/>
+			<path fill="#54CB51" d="M380.1,842.8c-0.2,7.3-7.6,16.5-17,16.5c-9.4,0-17-7.5-17-16.8c0-9.3,7.6-16.8,17-16.8
+			C372.5,825.8,380.5,833.6,380.1,842.8z"/>
+			<path fill="#EA4446" d="M380.4,843h-17.1h-12l0,34.3C351.3,877.3,379.4,862,380.4,843z"/>
+			<path fill="#FFB92E" d="M322.1,843h17.1H371l-19.7,34.3C351.3,877.3,323.5,862,322.1,843z"/>
+			<path fill="#549EED" d="M355.3,842.5c0,9.1-7.4,16.6-16.6,16.6c-9.1,0-16-7.5-16.6-16.6c-0.6-9.1,7.4-16.6,16.6-16.6
+			C347.9,826,355.3,833.4,355.3,842.5z"/>
+			<path fill="#FDDB36" d="M322.1,843h18h29.4l-18.3,34.3C351.3,877.3,323.5,862,322.1,843z"/>
+	</g>
+	<g>
+		<path d="M278.5,826.4h10.7v41.8H313v9.4h-34.6V826.4z"/>
+	</g>
+	<g>
+		<path d="M401.8,877.7l-19.2-51.3h11.3l13.3,37.1l13.3-37.1h11l-19.3,51.3H401.8z"/>
+		<path d="M476.4,826.4v9.3h-24.3V847h22v9.1h-22v12.2h24.3v9.4h-34.8v-51.3H476.4z"/>
+	</g>
+	<g>
+		<g>
+			<path d="M523.8,825c12.1,0,19.5,7.1,21.5,17.4h-10.6c-1.8-4.7-4.9-7.8-10.9-7.8c-8.2,0-13,7.2-13,16.9c0,9.7,4.8,16.9,13,16.9
+				c5.9,0,9.1-3.2,10.9-7.9h10.6c-1.9,10.4-9.3,17.4-21.5,17.4c-13.7,0-23.9-10.8-23.9-26.5S510.1,825,523.8,825z"/>
+			<path d="M578.2,877.9c-14.3,0-24.2-11.2-24.2-26.5c0-15.4,9.9-26.5,24.2-26.5c14.3,0,24.3,11.1,24.3,26.5
+				C602.5,866.8,592.5,877.9,578.2,877.9z M578.2,834.5c-8.1,0-13.4,6.9-13.4,16.9s5.3,16.9,13.4,16.9c8.2,0,13.5-6.9,13.5-16.9
+				S586.4,834.5,578.2,834.5z"/>
+			<path d="M614.1,825.8h10.7v41.8h23.9v9.4h-34.6V825.8z"/>
+			<path d="M680,877.9c-14.3,0-24.2-11.2-24.2-26.5c0-15.4,9.9-26.5,24.2-26.5c14.3,0,24.3,11.1,24.3,26.5
+				C704.3,866.8,694.3,877.9,680,877.9z M680,834.5c-8.1,0-13.4,6.9-13.4,16.9s5.3,16.9,13.4,16.9c8.2,0,13.5-6.9,13.5-16.9
+				S688.2,834.5,680,834.5z"/>
+			<path d="M726.4,858v19.1h-10.6v-51.3h21.1c10.8,0,17.9,5.8,17.9,16.3c0,8.2-4.5,13.4-11.7,15.1l13.5,19.9h-12L732,858H726.4z
+				 M726.4,849.2h9.9c5.3,0,8.1-2.8,8.1-7.1c0-4.3-2.8-7.2-8.1-7.2h-9.9V849.2z"/>
+			<path d="M774.7,862.5c1.4,4.5,5.2,6.6,10.2,6.6c5.2,0,8.6-2.3,8.6-6.4c0-3.1-1.8-4.8-6.3-5.8l-9.2-2.1c-7.3-1.7-13-5.6-13-14
+				c0-9.3,7.7-15.8,18.4-15.8c11.7,0,18.4,6.2,20.1,14.9H793c-1.2-3.4-4.1-6.1-9.4-6.1c-4.8,0-8.1,2.3-8.1,6c0,2.9,1.9,4.7,5.8,5.6
+				l9.3,2.2c8.3,1.9,13.4,6.7,13.4,14.4c0,9.9-8.2,15.9-19,15.9c-11.4,0-19.5-5.7-21.3-15.4H774.7z"/>
+		</g>
+	</g>
+</g>
+</svg>
+<h1>
+	<a href="#window">About</a>
+</h1>
+
+
+</div>
+
+<div class="colorpalette">
+		<div class="Palette1">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#4A90E2" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+		<div class="Palette2">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#F36B22" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+		<div class="Palette3">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#A593E0" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+		<div class="Palette4">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#B8E986" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+		<div class="Palette5">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#E30080" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+</div>	
+
+</div>
+<div class="modal" id="window">
+	<div class="modal-container">
+		<h1  class="modheadone">WELCOME TO <span>LOVECOLORS.</span></h1>
+		<h1 class="modheadtwo">Hi, my name is Arunkumar. I'm the Designer & Developer of Love Colors. I designed, coded & launched this site as a side project and challenge to myself.</h1>
+		<p>
+			<a href="#">close</a>
+		</p>
+	</div>
+</div>
+</body>
 </html>
