[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WoWcolors</title>
-	<link rel="stylesheet" type="text/css" href="ui/style.css">
-	<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/Arunkumar47/imad-2016-app/master/ui/fav_icon.png">
+	<title>Lovecolors</title>
+	<link rel="stylesheet" type="text/css" href="P:\IMAD\Project\ui\style.css">
+	<link rel="shortcut icon" type="image/x-icon" href="P:\IMAD\Project\ui\fav_icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
@@ -119,13 +119,95 @@
 				#4A90E2
 			</p> -->
 		</div>
+
+		<div class="Palette6">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#549EED" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+		<div class="Palette7">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#79ED72" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+		<div class="Palette8">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#FDDB36" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+		<div class="Palette9">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#EA4446" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+		<div class="Palette10">
+			<svg viewBox="235 176 107 106" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    		<path d="M300.980366,216 L301,216 C314.807119,216 326,227.192881 326,241 C326,254.807119 314.807119,266 301,266 L251,266 L251,216 L251.019634,216 C251.544543,202.656463 262.527796,192 276,192 C289.472204,192 300.455457,202.656463 300.980365,215.999992 Z" id="Combined-Shape" stroke="none" fill="#54CB51" fill-rule="evenodd" transform="translate(288.500000, 229.000000) rotate(-45.000000) translate(-288.500000, -229.000000) ">
+    		</path>
+			</svg>
+			<!-- <p>
+				#4A90E2
+			</p> -->
+		</div>
+
+
+
+		<div class="Ptext1">
+			<p>
+				#4A90E2
+			</p>
+		</div>
+
+		<div class="Ptext2">
+			<p>
+				#F36B22
+			</p>
+		</div>
+
+		<div class="Ptext3">
+			<p>
+				#A593E0
+			</p>
+		</div>
+
+		<div class="Ptext4">
+			<p>
+				#B8E986
+			</p>
+		</div>
+
+		<div class="Ptext5">
+			<p>
+				#E30080
+			</p>
+		</div>
 </div>	
 
 </div>
 <div class="modal" id="window">
 	<div class="modal-container">
 		<h1  class="modheadone">WELCOME TO <span>LOVECOLORS.</span></h1>
-		<h1 class="modheadtwo">Hi, my name is Arunkumar. I'm the Designer & Developer of Love Colors. I designed, coded & launched this site as a side project and challenge to myself.</h1>
+		<h1 class="modheadtwo">Hi, My name is Krishnamoorthy. I'm the Designer & Developer of Love Colors. This is an inspiration from Mackenzie Child who developed LOL colors.</h1>
 		<p>
 			<a href="#">close</a>
 		</p>
