[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Lovecolors</title>
-	<link rel="stylesheet" type="text/css" href="ui\style.css">
-	<link rel="shortcut icon" type="image/x-icon" href="ui\fav_icon.png">
+	<link rel="stylesheet" type="text/css" href="ui/style.css">
+	<link rel="shortcut icon" type="image/x-icon" href="ui/fav_icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
